# OPC-RAG-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: dataset_eval.csv  dataset_eval_enriched_preview.csv  ragas_results.csv
data/dataset_eval_enriched/: data-00000-of-00001.arrow  dataset_info.json  state.json
src/: .env.example  app.py  build_index.py  create_dataset_rag.py  data_ingestion.py  evaluate_ragas.py  preprocessing.py  rag_chain.py  vectorization.py
tests/: test_data.py
